--- a/views/books/paths.mustache
+++ b/views/books/paths.mustache
@@ -58,6 +58,7 @@
                                     {{^expired}}
                                         <div>Active Book Count: <strong>{{active_book_count}}</strong></div>
                                         <div>Done Book Count: <strong>{{done_book_count}}</strong></div>
+                                        <div>Abandoned Book Count: <strong>{{abandoned_book_count}}</strong></div>
                                         <div>Raw Daily: <strong>{{daily_amount_raw}}</strong></div>
                                     {{/expired}}
                                 </div>
