Add link to tags

--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -136,7 +136,7 @@
                                     {{/is_secret}}
                                     {{#tags}}
                                         <br><br>
-                                        <strong>{{imploded_hashtag_blank}}</strong>
+                                        <strong>{{{imploded_link_blank}}}</strong>
                                     {{/tags}}
                                 </footer>
 
