Remove init text

--- a/views/include/navbar.mustache
+++ b/views/include/navbar.mustache
@@ -5,7 +5,7 @@
 
     <ul class="nav">
         <li class="nav-item">
-            <div id="navbarReadingAverageInfo" class="nav-link">hi</div>
+            <div id="navbarReadingAverageInfo" class="nav-link"></div>
         </li>
 
         <li class="nav-item">
