Hide highlight favorite when collapsed sidebar

--- a/views/include/navbar.mustache
+++ b/views/include/navbar.mustache
@@ -17,8 +17,14 @@
 <script>
     $(document).ready(function () {
         $(".collapseSidebar").on("click", function (e) {
-            $(".vertical").hasClass("narrow") ? $(".vertical").toggleClass("open") : ($(".vertical").toggleClass("collapsed"), $(".vertical").hasClass("hover") && $(".vertical").removeClass("hover")), e.preventDefault()
-        })
+            if ($(".vertical").hasClass("narrow")) {
+                $(".vertical").toggleClass("open")
+                $('#highlight-favorites').toggle(); // TODO doesnt work
+            } else {
+                $('#highlight-favorites').hide();
+                ($(".vertical").toggleClass("collapsed"), $(".vertical").hasClass("hover") && $(".vertical").removeClass("hover")), e.preventDefault()
+            }
+        });
 
         var resultNavbarInfos = ajaxCall('GET', "/navbar-infos", null, false, false);
         $('#navbarTodayInfo').text(resultNavbarInfos.today);
