--- a/views/home.mustache
+++ b/views/home.mustache
@@ -6,7 +6,9 @@
 <body class="vertical dark">
 <div class="wrapper">
     {{> include}}
-    {{> navbar }}
+    <nav class="topnav navbar navbar-light">
+        {{> navbar }}
+    </nav>
     <main role="main" class="main-content">
         <div class="container-fluid">
             <div class="row justify-content-center">
