--- a/views/books/highlights.mustache
+++ b/views/books/highlights.mustache
@@ -9,7 +9,9 @@
 
 <body class="vertical dark">
 {{> include}}
-{{> navbar }}
+<nav class="topnav navbar navbar-light">
+    {{> navbar }}
+</nav>
 <div class="wrapper">
     <main role="main" class="main-content">
         <div class="container-fluid">
