--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -21,11 +21,11 @@
 <body class="vertical dark">
 <div class="wrapper">
     <nav class="topnav navbar navbar-light">
-        <button type="button" class="navbar-toggler text-muted mt-2 p-0 mr-3 collapseSidebar">
-            <i class="fe fe-menu navbar-toggler-icon"></i>
-        </button>
-        <input id="searchHighlights" class="nav form-control bg-transparent border-0 pl-4 text-muted"
-               type="search" placeholder="Search Highlights" aria-label="Search">
+        {{> navbar }}
+
+        <input id="searchHighlights" class="nav form-control bg-transparent border-0 pl-4 text-muted" type="search"
+               placeholder="Search Highlights" aria-label="Search">
+
     </nav>
     <main role="main" class="main-content">
         <div class="container-fluid">
@@ -196,10 +196,6 @@
             multiple: true,
             theme: 'bootstrap4',
         });
-
-        $(".collapseSidebar").on("click", function (e) {
-            $(".vertical").hasClass("narrow") ? $(".vertical").toggleClass("open") : ($(".vertical").toggleClass("collapsed"), $(".vertical").hasClass("hover") && $(".vertical").removeClass("hover")), e.preventDefault()
-        })
 
         $(".lazy").Lazy();
 
