--- a/views/include/include.mustache
+++ b/views/include/include.mustache
@@ -13,3 +13,4 @@
 <script src='/js/dataTables.bootstrap4.min.js'></script>
 <script src='/js/functions.js'></script>
 <script src="/js/mustache.min.js"></script>
+<script src="/js/navbar.js"></script>
