--- a/views/logs.mustache
+++ b/views/logs.mustache
@@ -14,7 +14,9 @@
 
 <body class="vertical dark">
 {{> include}}
-{{> navbar }}
+<nav class="topnav navbar navbar-light">
+    {{> navbar }}
+</nav>
 <div class="wrapper">
     <main role="main" class="main-content">
         <div class="container-fluid">
