Fix login error

--- a/views/login.mustache
+++ b/views/login.mustache
@@ -22,7 +22,9 @@
         </form>
     </div>
 </div>
-{{> include }}
+<script src="/js/jquery.min.js"></script>
+<script src='/js/functions.js'></script>
+<script src="/js/jquery-bootstrap-purr.min.js"></script>
 <script>
     $(document).ready(function () {
 
