--- a/views/register.mustache
+++ b/views/register.mustache
@@ -23,7 +23,9 @@
         </form>
     </div>
 </div>
-{{> include }}
+<script src="/js/jquery.min.js"></script>
+<script src='/js/functions.js'></script>
+<script src="/js/jquery-bootstrap-purr.min.js"></script>
 <script>
     $(document).ready(function () {
 
