--- a/views/register.mustache
+++ b/views/register.mustache
@@ -3,21 +3,24 @@
 <head>
     {{> head }}
 </head>
-<body class="dark ">
+<body class="dark">
 <div class="wrapper vh-100">
     <div class="row align-items-center h-100">
         <form class="col-lg-3 col-md-4 col-10 mx-auto text-center" id="registerForm">
             <div class="form-group">
                 <label for="username" class="sr-only">Username</label>
-                <input type="text" id="username" name="username" class="form-control form-control-lg" placeholder="Username" autofocus="">
+                <input type="text" id="username" name="username" class="form-control form-control-lg"
+                       placeholder="Username" autofocus="">
             </div>
             <div class="form-group">
                 <label for="password" class="sr-only">Password</label>
-                <input type="password" id="password" name="password" class="form-control form-control-lg" placeholder="Password">
+                <input type="password" id="password" name="password" class="form-control form-control-lg"
+                       placeholder="Password">
             </div>
             <div class="form-group">
                 <label for="passwordAgain" class="sr-only">Password</label>
-                <input type="password" id="passwordAgain" name="passwordAgain" class="form-control form-control-lg" placeholder="Password Again">
+                <input type="password" id="passwordAgain" name="passwordAgain" class="form-control form-control-lg"
+                       placeholder="Password Again">
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="button" id="btnRegister">Register</button>
         </form>
