--- a/views/logs.mustache
+++ b/views/logs.mustache
@@ -90,13 +90,13 @@
 <script>
     $(document).ready(function () {
 
+        var unsavedChanges = false;
+
         var simplemde = new SimpleMDE({
             element: $("#logTextArea")[0],
             toolbar: ["bold", "italic", "strikethrough", "heading", "code", "quote", "unordered-list", "ordered-list", "clean-block", "link", "image", "table", "horizontal-rule", "preview"],
             insertTexts: {"image": ["[", "](/img/)"]},
         });
-
-        $('#logTextArea').show();
 
         var previousLog = simplemde.value();
 
@@ -122,14 +122,22 @@
             if (currentLog && currentLog !== previousLog) {
                 ajaxCall('POST', "/logs", "log=" + encodeURIComponent(currentLog))
                 previousLog = currentLog;
+                unsavedChanges = false;
             }
         }
 
         var timer = setInterval(autoSave, 5000);
 
-        simplemde.codemirror.on("change", function(e){
+        simplemde.codemirror.on("change", function (e) {
+            unsavedChanges = true;
             clearInterval(timer);
             timer = setInterval(autoSave, 5000);
+        });
+
+        window.addEventListener("beforeunload", function (event) {
+            if (unsavedChanges) {
+                event.preventDefault();
+            }
         });
 
     });
