--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -122,6 +122,10 @@
                     {{#highlights}}
                         <div class="card highlightCard">
                             <div class="card-body">
+                                {{#version_count}}
+                                    <a role="button" href="/highlights/{{id}}/versions" class="badge badge-primary float-right"><span
+                                            class="fe fe-activity fe-8"></span></a>
+                                {{/version_count}}
                                 <a role="button" href="/highlights/{{id}}" class="badge badge-primary float-right"><span
                                         class="fe fe-edit fe-8"></span></a>
                                 <a role="button" class="badge float-right addToFavorite" data-id="{{id}}"><span
