Change badge class

--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -123,7 +123,7 @@
                         <div class="card highlightCard">
                             <div class="card-body">
                                 {{#version_count}}
-                                    <a role="button" href="/highlights/{{id}}/versions" class="badge badge-primary float-right"><span
+                                    <a role="button" href="/highlights/{{id}}/versions" class="badge badge-warning float-right"><span
                                             class="fe fe-activity fe-8"></span></a>
                                 {{/version_count}}
                                 <a role="button" href="/highlights/{{id}}" class="badge badge-primary float-right"><span
