--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -198,7 +198,7 @@
         var unsavedChanges = false;
 
         $('.select2-multi').select2({
-            placeholder: "Reference with a book",
+            placeholder: "Reference with books",
             multiple: true,
             theme: 'bootstrap4',
         });
