--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -77,7 +77,7 @@
                                     </div>
                                     <div class="form-group col-2">
                                         <select id="book" name="book[]" class="form-control select2-multi">
-                                            <option selected></option>
+                                            <option disabled selected></option>
                                             {{#books}}
                                                 <option value="{{uid}}">{{book}}</option>
                                             {{/books}}
@@ -199,7 +199,7 @@
 
         $('.select2-multi').select2({
             placeholder: "Reference with books",
-            multiple: true,
+            multiple: false,
             theme: 'bootstrap4',
         });
 
