--- a/views/highlights/reusable/highlight-cards.mustache
+++ b/views/highlights/reusable/highlight-cards.mustache
@@ -2,9 +2,8 @@
     <div class="card highlightCard">
         <div class="card-body">
             {{#version_count}}
-                <a role="button" href="/highlights/{{id}}/versions"
-                   class="badge badge-warning float-right"><span
-                        class="fe fe-activity fe-8"></span></a>
+                <a role="button" href="#" data-id="{{id}}" class="badge badge-warning float-right btnHighlightVersions"
+                   data-toggle="modal" data-target="#highlightVersionsModal"><span class="fe fe-activity fe-8"></span></a>
             {{/version_count}}
             <a role="button" href="/highlights/{{id}}" class="badge badge-primary float-right"><span
                     class="fe fe-edit fe-8"></span></a>
