--- a/views/highlights/details.mustache
+++ b/views/highlights/details.mustache
@@ -104,7 +104,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <button id="updateHighlight" type="button" class="btn btn-primary"
+                                        <button id="btnUpdateHighlight" type="button" class="btn btn-primary"
                                                 data-id="{{id}}" {{#not_editable}}disabled{{/not_editable}}>
                                             Update
                                         </button>
@@ -252,8 +252,30 @@
             ajaxCall('POST', "/favorites", data)
         });
 
-        $('#updateHighlight').on('click', function (e) {
+        $('#btnUpdateHighlight').on('click', function (e) {
+            updateHighlight();
+        });
 
+        $(document).keydown(function(event) {
+            if ((event.metaKey || event.ctrlKey) && event.which === 83) {
+                event.preventDefault(); // Prevent default action (usually means saving the page)
+                updateHighlight();
+            }
+        });
+
+        $('#deleteHighlight').on('click', function (e) {
+
+            var highlightID = $(this).data('id');
+            var result = ajaxCall('DELETE', "/highlights/" + highlightID, null);
+
+            if (result !== false) {
+                unsavedChanges = false;
+                window.location.replace('/highlights/{{nextID}}')
+            }
+
+        });
+
+        var updateHighlight = function () {
             var highlight = simplemdeHighlight.value();
             var author = $('#author').val();
             var source = $('#source').val();
@@ -261,7 +283,7 @@
             var highlightLocation = $('#location').val();
             var link = $('#link').val();
             var tags = $('#tags').val();
-            var highlightID = $(this).data('id');
+            var highlightID = $('#btnUpdateHighlight').data('id');
             var blogPath = $('#blog_path').val();
             var title = $('#title').val();
             var is_secret = $('#is_secret').is(":checked") ? 1 : 0;
@@ -284,20 +306,7 @@
                 unsavedChanges = false;
                 location.reload();
             }
-
-        });
-
-        $('#deleteHighlight').on('click', function (e) {
-
-            var highlightID = $(this).data('id');
-            var result = ajaxCall('DELETE', "/highlights/" + highlightID, null);
-
-            if (result !== false) {
-                unsavedChanges = false;
-                window.location.replace('/highlights/{{nextID}}')
-            }
-
-        });
+        }
 
     });
 </script>
