Remove reload action from btnAddToLibrary and remove unused code

--- a/views/books/all.mustache
+++ b/views/books/all.mustache
@@ -134,15 +134,7 @@
             var result = ajaxCall('PUT', "/books/" + $(this).data("id") + "/add-to-library", null)
 
             if (result !== false) {
-                location.reload();
-            }
-        });
-
-        $(".btnResetBook").on('click', function (e) {
-            var result = ajaxCall('DELETE', "/books/" + $(this).data("id"), null)
-
-            if (result !== false) {
-                location.reload();
+                $(this).remove();
             }
         });
 
