Add highlights link

--- a/views/books/index.mustache
+++ b/views/books/index.mustache
@@ -29,6 +29,7 @@
                                             </button>
                                             <div class="dropdown-menu dropdown-menu-right"
                                                  aria-labelledby="rangeDropdown">
+                                                <a class="dropdown-item small text-muted" href="/highlights?bookUID={{bookUID}}">Highlights</a>
                                                 {{#abandone}}
                                                     <a class="dropdown-item small text-muted btnMakeAbandoned"
                                                        data-uid="{{bookUID}}" data-path="{{pathUID}}">Abandone</a>
