Add chosen tag to tag field

--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -56,7 +56,7 @@
 
                                 <div class="form-row">
                                     <div class="form-group col-4">
-                                        <input id="tags" placeholder="Tags" type="text"
+                                        <input id="tags" placeholder="Tags" type="text" {{#tag}}value="{{.}}"{{/tag}}
                                                class="form-control enterButtonKeyPress">
                                     </div>
                                     <div class="form-group col-2">
